# SStock

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  setup.bat  start.bat  start_backend.bat  start_frontend.bat  stop.bat
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/bot/: market_data.py  registry.py  trading_bot.py
backend/app/db/: database.py
backend/app/kis/: auth.py  charts.py  client.py  constants.py  numbers.py  orders.py  quotes.py  rankings.py  realtime.py  trade_pnl.py
backend/app/realtime/: hub.py
backend/app/routers/: account.py  audit.py  bot.py  budgets.py  charts.py  company.py  health.py  market.py  orders.py  quotes.py  recommend.py  regime.py  risk_limits.py  signals.py  (+6 more)
backend/tests/: conftest.py  test_account.py  test_bot_router.py  test_budget.py  test_charts.py  test_client.py  test_config_mode.py  test_hub.py  test_indicators.py  test_kis_auth.py  test_kis_orders.py  test_krx.py  test_naver.py  test_order_service.py  test_orders_router.py  test_phase3_dual_mode.py  test_phase4_mode_columns.py  test_quotes.py  test_rankings.py  test_realtime.py  test_recommend_router.py  test_recommend_service.py  test_recommend_stream.py  test_regime.py  test_regime_router.py  test_risk_guard.py  test_risk_limit.py  test_rsi_ma.py  test_sector.py  test_stock_master.py  test_strategies.py  test_strategy_audit.py  test_strategy_config.py  test_strategy_governor.py  test_strategy_perf.py  test_trade_pnl.py  test_trading_bot.py  test_watchlist.py  test_watchlist_router_refresh.py  test_ws.py
(+134 files in other folders)
